# makeScaffold

./: CMakeLists.txt
lib/OTools/: otools.h
src/: CMakeLists.txt  data.h  data_mendel.cpp
tests/: CMakeLists.txt  main.cc  mendel.cc  test_data.fam  test_data.vcf.gz.tbi
